style: fix scrolling layout issues in academic cv

--- a/src/pages/Resume/AcademicCV.css
+++ b/src/pages/Resume/AcademicCV.css
@@ -20,7 +20,7 @@
   justify-content: center;
 }
 
-.AcademicCV-M span {
+.CVHeader span {
   font-size: 100px;
 }
 
@@ -799,7 +799,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   padding: 0 15px;
   /* opacity: 0.7; */
   color: #ffffff;
@@ -1371,12 +1371,18 @@
 }
 
 /* Webkit browsers like Chrome, Safari */
-.MoreInfoPapers::-webkit-scrollbar {
+.MoreInfoPapers::-webkit-scrollbar,
+.Awards-Details::-webkit-scrollbar,
+.Skill::-webkit-scrollbar,
+.QualiMain::-webkit-scrollbar {
   width: 2px;
   /* Width of the scrollbar */
 }
 
-.MoreInfoPapers::-webkit-scrollbar-track {
+.MoreInfoPapers::-webkit-scrollbar-track,
+.Awards-Details::-webkit-scrollbar-track,
+.Skill::-webkit-scrollbar-track,
+.QualiMain::-webkit-scrollbar-track {
   background: transparent;
   /* Color of the tracking area */
   box-shadow: inset 0 0px 15px rgba(38, 38, 38, 0.2);
@@ -1385,7 +1391,10 @@
   /* Roundness of the scroll thumb */
 }
 
-.MoreInfoPapers::-webkit-scrollbar-thumb {
+.MoreInfoPapers::-webkit-scrollbar-thumb,
+.Awards-Details::-webkit-scrollbar-thumb,
+.Skill::-webkit-scrollbar-thumb,
+.QualiMain::-webkit-scrollbar-thumb {
   background-color: #d49d819a;
   /* Color of the scroll thumb */
   border-radius: 6px;
